# my-http

./: Cargo.toml
.github/workflows/: build_tests.yaml
my-http/: Cargo.toml
my-http-is-alive-middleware/: Cargo.toml
my-http-is-alive-middleware/src/: is_alive_middleware.rs
my-http-server-controllers/src/: lib.rs
my-http-server-core/: Cargo.toml
my-http-server-core/src/static_files_middleware/: static_files.rs
my-http-server-swagger/src/: consts.rs
my-http-server-swagger/src/action_builder/: action_builder.rs
my-http-server-swagger/src/action_builder/attributes/: http_method.rs  http_route.rs
my-http-server-swagger/src/enum_doc/: generate.rs
my-http-server-swagger/src/http_input_object_structure/: generate.rs
my-http-server-swagger/src/http_object_structure/: generate_crate_http_object_structure.rs  generate_data_provider.rs
my-http-server-swagger/src/input_models/: generate.rs
my-http-server-swagger/src/input_models/model_reader/: read_body.rs  reading_query_string.rs
my-http-server-swagger/src/out_enum_with_model/: generate.rs
my-http-server-web-sockets/: Cargo.toml
my-http-server-web-sockets/src/: helpers.rs
my-http-signalr-middleware/: Cargo.toml
my-http-signalr-middleware/src/: my_signal_r_actions.rs  my_signal_r_callbacks.rs  web_socket_callbacks.rs
my-http-utils/: Cargo.toml
my-http/src/: lib.rs
