[package]
name = "my-http-server-web-sockets"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
my-telemetry = ["dep:my-telemetry"]

[dependencies]
my-http-server-core = { path = "../my-http-server-core" }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
hyper = { version = "*", features = ["full"] }
hyper-tungstenite = "*"
futures = "*"
my-telemetry = { optional = true, tag = "1.0.1", git = "https://github.com/MyJetTools/my-telemetry.git"}
